# SDG-VOX

./: .gitignore  ANALYSIS.md  CHANGELOG.md  README.md  TEST-CHECKLIST.md  TODO.md  analysis.md  build.sh  documentation-plan.md  info.md  install.sh  migration-plan.md  uninstall.sh  update.sh
config/SDG-VOX/: config.json
docs/: CONCEPT-updated.md  CONCEPT.md  README-updated.md  README.md
docs/SDG-VOX/: 000-quick-reference.md  101-architecture.md  102-setup.md  201-commands.md  301-config-gui.md  501-integration.md  701-development.md  999-index.md  ARCHITECTURE.md  CONFIG_GUI.md  INTEGRATION.md  README.md  SETUP.md  TROUBLESHOOTING.md  WAKE_WORD.md
local/: install.sh
local/SDG-VOX/: pyproject.toml  vox.sh
local/SDG-VOX/vox/: __init__.py  __main__.py  audio_capture.py  cli.py  command_tree.py  config_manager.py  config_ui.py  daemon.py  executor.py  flowchart_view.py  models.py  overlay.py  recognizer.py  whisper_recognizer.py
other/: vox-config.desktop
tips/SDG-VOX/: tips.list
